--- a/Application/build.gradle
+++ b/Application/build.gradle
@@ -1,18 +1,24 @@
 
 buildscript {
     repositories {
+        maven { url "http://maven.aliyun.com/nexus/content/groups/public/" }
+        maven { url "http://maven.aliyun.com/nexus/content/repositories/jcenter" }
+        maven { url "https://jitpack.io" }
         jcenter()
         google()
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.1'
+        classpath 'com.android.tools.build:gradle:3.5.2'
     }
 }
 
 apply plugin: 'com.android.application'
 
 repositories {
+    maven { url "http://maven.aliyun.com/nexus/content/groups/public/" }
+    maven { url "http://maven.aliyun.com/nexus/content/repositories/jcenter" }
+    maven { url "https://jitpack.io" }
     jcenter()
     google()
 }
